--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -1,16 +1,5 @@
 // Default layout
 .vex-dialog-default {
-
-  // - layout
-  text-align: center;
-  &:before {
-    content: '';
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-    width: 1px;
-    margin-left: -1px;
-  }
   .vex-overlay {
     background-color: rgba(255, 255, 255, 0.4);
   }
@@ -21,11 +10,6 @@
     position: relative;
     padding: 30px;
     border: solid 1px #000;
-    .vex-footer {
-      margin: 30px -30px -30px -30px;
-      padding: 30px;
-      > *:only-child {margin: 0;}
-    }
   }
   .vex-close {
     @extend .icon-cross;
@@ -33,26 +17,27 @@
     top: 10px;
     right: 10px;
   }
-
-  .or-rhombus {
-    width: 55px;
-    height: 55px;
-    text-transform: uppercase;
-    display: inline-block;
-    vertical-align: top;
-  }
 }
 
 // Bottom  
 .vex-dialog-bottom {
+  text-align: center;
+  &:before {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+    width: 1px;
+    margin-left: -1px;
+  }
   .vex-content {
     vertical-align: bottom;
+    display: inline-block;
     margin-bottom: 50px;
     text-align: center;
     max-width: 760px;
     border: 0;
     h1 {
-      font-size: 34px !important;
       font-weight: 400;
       padding-bottom: 0;
       text-transform: none;
@@ -64,6 +49,18 @@
       margin: 20px 0 30px;
       font-weight: 300;
     }
+    .or-rhombus {
+      width: 55px;
+      height: 55px;
+      text-transform: uppercase;
+      display: inline-block;
+      vertical-align: top;
+    }
+  }
+  .vex-footer {
+    margin-top: 20px;
+    padding: 20px;
+    > *:only-child {margin: 0;}
   }
 }
 // @end Bottom 
@@ -120,6 +117,8 @@
     padding-top:9%;
   }
 
+
+
   .vex-content {
     border:5px solid black;
     width: 700px;
@@ -127,12 +126,6 @@
 
   .vex-dialog-form {
 
-    .form-group {
-
-    }
-    .vex-dialog-input {
-
-    }
 
     .vex-dialog-buttons {
       position:absolute;
@@ -444,4 +437,102 @@
   }
 }
 // @end Text popups
+// -----------------
+
+
+// Modal generator templates
+.vex-theme-flat-attack.email-capture-modal.vex-dialog-bottom {
+  &.vex-dialog-pink {
+    .vex-content { background-color: $pink-bg;}
+    .vex-footer { background-color: #f9ebf7;}
+  }
+  .vex-content { border: 0; }
+  
+  .vex-dialog-input {
+    margin: 0;
+  }
+  .vex-dialog-form .vex-dialog-buttons .btn {
+    @extend .icon-cross;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    max-width: none;
+    background: none
+  }
+
+  .vex-footer {
+    .btn-facebook {
+      font-size: 12px;
+      line-height: 25px;
+    }
+    input {
+      &.form-control { 
+        border-radius: 0;
+        border: 0;
+        border-bottom: solid 1px #000;
+        margin: 0;
+        line-height: 1.6;
+        font-size: 15px;
+        font-weight: 300;
+        &:focus {
+          box-shadow: none;
+          border: 0;
+          border-bottom: solid 1px #000;
+        }
+      }
+      &.form-control-md { @extend .form-control-md;}
+      &.form-control-transparent { @extend .form-control-transparent;}
+    }
+  }
+  .or-rhombus {
+    font-size: 0.65em;
+  }
+
+
+  // Timer
+  &.vex-timer {
+    .vex-dialog-message {
+      h3 {
+        font-size: 28px;
+        font-weight: 300;
+        color: #000;
+        strong {
+          display: block;
+          margin-bottom: 10px;
+          font-size: 33px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+
+  // Text
+  &.vex-text {
+    .vex-dialog-message {
+      margin: 0;
+      h3 {
+        text-transform: uppercase;
+        font-size: 28px;
+        font-weight: 300;
+        margin-bottom: 30px;
+        color: #000;
+        font-family: forum;
+        strong {
+          display: block;
+          font-family: "brandon-grotesque", sans-serif;
+          text-transform: none;
+          margin-bottom: 10px;
+          font-size: 33px;
+          font-weight: 400;
+        }
+      }
+      div {
+        background-color: #f9ebf7;
+        padding: 30px;
+      }
+      p:last-child {display: none;}
+    }
+  }
+}
+// @end Modal generator templates
 // -----------------
