--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -73,7 +73,7 @@
     <%= fb_analytics_track('6013645244896', current_site_version.currency, @spree_order.display_item_total) %>
 
     <%= render :partial => 'spree/shared/rakuten' %>
-    <%= render :partial => 'spree/shared/polvore' %>
+    <%= render :partial => 'spree/shared/polyvore' %>
     <%= render :partial => 'spree/shared/customerio' %>
   <% end %>
 
