--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -14,6 +14,7 @@ table.line_items
       th SKU
       th Style Name
       th Size
+      th Colour
       th Customisations
       th Factory
       th Customer
@@ -43,7 +44,8 @@ table.line_items
           td = line_item.style_number
           td = line_item.style_name
           td = line_item.country_size
-          td = line_item.customisations.collect(&:first).join(', ')
+          td = line_item.colour_name
+          td = line_item.customisations.collect(&:first).join("<br>").html_safe
           td = line_item.factory
           - if position.zero?
             td rowspan=total_items
