--- a/app/views/shared/redesign/_flash_messages.html.slim
+++ b/app/views/shared/redesign/_flash_messages.html.slim
@@ -1,8 +1,6 @@
 - flash.each do |type, message|
-  .row.col-md-12
-    div class="alert #{bootstrap_class_for(type)} alert-dismissible fade in" role="alert"
-      button type="button" class="close" data-dismiss="alert" aria-label="Close" &times;
+  .alert.alert-dismissible.fade.in class="#{bootstrap_class_for(type)}" role="alert"
+    button type="button" class="close" data-dismiss="alert" aria-label="Close" &times;
 
-      h3 class=bootstrap_class_for(type) 
-        = message
-
+    h3 class=bootstrap_class_for(type) 
+      = message
