--- a/app/views/spree/shared/_user_form.html.slim
+++ b/app/views/spree/shared/_user_form.html.slim
@@ -1,39 +1,35 @@
-
 .div data-hook="signup"
   div data-hook="signup_inside_form"
     .row
-      .col-md-6.col-xs-12.form-group
+      .col-md-6.form-group
         = f.label :first_name
         = f.text_field :first_name, :class => 'form-control form-control-md'
-      .col-md-6.col-xs-12.form-group
+      .col-md-6.form-group
         = f.label :last_name
         = f.text_field :last_name, :class => 'form-control form-control-md'
-    .row
-      .col-md-12.form-group
-        = f.label :email
-        = f.email_field :email, autocomplete: :off, :class => 'form-control form-control-md'
-    #password-credentials
-      .row
-        .col-md-12.form-group
-          = f.label :password
-          = f.password_field :password, autocomplete: :off, :class => 'form-control form-control-md'
-      .row
-        .col-md-12.form-group
-          = f.label :password_confirmation
-          = f.password_field :password_confirmation, autocomplete: :off, :class => 'form-control form-control-md'
-    .row
-      .col-md-12.form-group
-        .checkbox
-          label for="spree_user_newsletter"
-            = f.check_box :newsletter
-            span
-              ' Subscribe to our Newsletter
+    .form-group
+      = f.label :email
+      = f.email_field :email, autocomplete: :off, :class => 'form-control form-control-md'
 
-    .row data-hook="signup_below_password_fields"
-      .col-md-5.col-xs-12.form-group
-        = f.submit 'Create an account', class: 'btn btn-black'
+    #password-credentials
+      .form-group
+        = f.label :password
+        = f.password_field :password, autocomplete: :off, :class => 'form-control form-control-md'
+      .form-group
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation, autocomplete: :off, :class => 'form-control form-control-md'
+    .form-group
+      .checkbox
+        label for="spree_user_newsletter"
+          = f.check_box :newsletter
+          span
+            ' Subscribe to our Newsletter
+
+    .form-group data-hook="signup_below_password_fields"
+      = f.submit 'Create an account', class: 'btn btn-black'
+
     .row
-      .col-md-5.col-xs-12
+      .col-sm-5
         p.text-center Already have an account?
         = link_to 'Sign in', spree.login_path, class: 'btn btn-block btn-black btn-md low-btn'
 
