quinceanera modal css

--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -402,3 +402,62 @@
 }
 // @end Text popups
 // -----------------
+
+.vex.vex-send-mom {
+  .vex-content {
+    border: 0;
+    h2 {
+      color: #000;
+      background: #f5e0f2;
+      text-align: center;
+      font-size: 33px;
+      text-transform: none;
+      line-height: 1.5;
+      padding: 28px 0 18px;
+      .subtitle {
+        font-size: 28px;
+        font-family: Forum, serif;
+        text-transform: uppercase;
+      }
+    }
+    .vex-dialog-form {
+      background: #f9ebf7;
+    }
+  }
+  .vex-dialog-input {
+    padding-bottom: 30px;
+    margin-bottom: 0;
+    text-align: center;
+    .wrap-email {
+      float: none;
+      width: 50%;
+      margin-left: 0;
+      display: inline-block;
+      vertical-align: top;
+      padding-left: 0;
+      padding-right: 0;
+    }
+    .wrap-button {
+      width: auto;
+      float: none;
+      display: inline-block;
+      vertical-align: top;
+      padding-left: 0;
+      padding-right: 0;
+    }
+    .form-control {
+      padding: 0;
+      background: transparent !important;
+      border-bottom: 2px solid #322f31 !important;
+      box-shadow: none !important;
+    }
+    .btn {
+      padding-left: 0;
+      padding-right: 0;
+      text-transform: none;
+      height: 60px;
+      background: transparent;
+      font-size: 18px;
+    }
+  }
+}
