--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -27,10 +27,9 @@
   #email-capture-fields.hidden
     input type="hidden" name="content" value=content
     input type="hidden" name="promocode" value=promocode
-    .row.no-padding
-      .col-md-8.col-md-offset-2.text-center
+    .row
+      .col-md-8.col-md-offset-2.text-center.wrap-email
         input.form-control.standard-form type="email" name="email" placeholder='email address'
-    .row.no-padding
-      .col-md-12.text-center
+      .col-xs-12.text-center.wrap-button
         button.btn.submit type="submit" value="submit"
           | Submit
