--- a/app/assets/stylesheets/redesign/_modal.css.scss
+++ b/app/assets/stylesheets/redesign/_modal.css.scss
@@ -446,7 +446,7 @@
       padding-right: 0;
     }
     .form-control {
-      padding: 0;
+      padding-top: 30px !important;
       background: transparent !important;
       border-bottom: 2px solid #322f31 !important;
       box-shadow: none !important;
@@ -456,6 +456,7 @@
       padding-right: 0;
       text-transform: none;
       height: 60px;
+      line-height: 60px;
       background: transparent;
       font-size: 18px;
     }
