--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -54,31 +54,31 @@
     #modal-popup-content-template.hidden
       input type="hidden" name="content" value=content
       input type="hidden" name="promocode" value=promocode
-      .vex-footer
-        .row
-          .col-sm-5
-            - if promocode == 'birthdaybabe' 
-              = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode)), class: 'btn btn-facebook btn-block btn-md'
-            - elsif params[:aap].to_s == 'true'
-              = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true), class: 'btn btn-facebook btn-block btn-md'
-            - else
-              = link_to 'Redeem via Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-md'
+      .vex-footer.clearfix
+        .col-sm-5
+          - if promocode == 'birthdaybabe' 
+            = link_to 'Redeem via Facebook', fb_auth_path(show_promocode_modal: encode(promocode)), class: 'btn btn-facebook btn-block btn-md'
+          - elsif params[:aap].to_s == 'true'
+            = link_to 'Redeem via Facebook', fb_auth_path(auto_apply: true), class: 'btn btn-facebook btn-block btn-md'
+          - else
+            = link_to 'Redeem via Facebook', fb_auth_path, class: 'btn btn-facebook btn-block btn-md'
 
-          .col-sm-2
-            .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
-          .col-sm-5
-            .input-group
-              input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="Redeem via e-mail"
-              span.input-group-addon
-                input.btn-reset type="submit" value="Send"
+        .col-sm-2
+          .or-rhombus: .rhombus: .rhombus-text-holder: .rhombus-text or
+        .col-sm-5
+          .input-group
+            input.form-control.form-control-md.form-control-transparent name="email" type="text" placeholder="Redeem via e-mail"
+            span.input-group-addon
+              input.btn-plain.btn-reset type="submit" value="Send"
 
   - else # default, support legacy
     #modal-popup-content-template.hidden
-      input type="hidden" name="content" value=content
-      input type="hidden" name="promocode" value=promocode
-      .row
-        .col-md-8.col-md-offset-2.text-center.wrap-email
-          input.form-control.standard-form type="email" name="email" placeholder='email address'
-        .col-xs-12.text-center.wrap-button
-          button.btn.submit type="submit" value="submit"
-            | Submit
+      .vex-footer.vex-footer-email
+        input type="hidden" name="content" value=content
+        input type="hidden" name="promocode" value=promocode
+        .row
+          .col-md-8.col-md-offset-2.text-center.wrap-email
+            input.form-control.standard-form type="email" name="email" placeholder='email address'
+          .col-xs-12.text-center.wrap-button
+            button.btn-plain.btn.submit type="submit" value="submit"
+              | Submit
