--- a/app/views/spree/order_mailer/send_to_friend.html.slim
+++ b/app/views/spree/order_mailer/send_to_friend.html.slim
@@ -12,53 +12,37 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td height="30"
             tr
               td style="color: #000; font: 400 italic 38px/1.2 Georgia, 'Trebuchet MS', 'Times New Roman', sans-serif;"
-                ' Order Confirmation
+                ' Quinceanera coming up soon? Let us help you finding the perfect dress
             tr
               td height="30"
             tr
               td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                p style="margin: 0 0 20px;" Hi #{@order.full_name},
                 p style="margin: 0;"
-                  | Thanks for shopping with Fame & Partners. Your order is being processed, and we'll send you another email to confirm when it has been shipped.
+                  | Your daughter has been browsing our website for her Quinceanera dress and has sent you her favourite styles to check out. Do you like them as much as she does?
             tr
               td height="30"
-            tr
-              td
-                p style="margin: 0; color: #000; text-transform: uppercase; font: 700 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" You ordered [#{@order.number}]:
             tr
               td
                 table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
-                  thead
-                    th style="color: #999; font-size: 13px; text-align: left; font-weight: 400; padding: 4px 6px; border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6;" Item
-                    th style="color: #999; font-size: 13px; text-align: left; font-weight: 400; padding: 4px 6px; border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6;" SKU
-                    th style="color: #999; font-size: 13px; text-align: left; font-weight: 400; padding: 4px 6px; border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6;" Qty
-                    th style="color: #999; font-size: 13px; text-align: left; font-weight: 400; padding: 4px 6px; border-top: 1px solid #d6d6d6; border-bottom: 1px solid #d6d6d6;" Price
                   tbody
-                    - @order.line_items.each do |item|
-                      tr
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;"
-                          div style="font-weight: 700" => raw(item.variant.product.name)
-                          div => raw(item.options_text)
-                          div style="font-weight: 700" = item.making_options_text
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" => item.variant.sku
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" => item.quantity
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 700; padding: 7px 6px; vertical-align: top;" => item.display_amount
-                  tr
-                    td style="border-top: 1px solid #d6d6d6; padding: 4px 6px;"
-                    td style="border-top: 1px solid #d6d6d6; padding: 4px 6px;"
-                    td style="border-top: 1px solid #d6d6d6; text-align: right; font-size: 13px; font-weight: 400; padding: 4px 6px;" Subtotal
-                    td style="border-top: 1px solid #d6d6d6; font-size: 13px; font-weight: 700; padding: 4px 6px;" = @order.display_item_total
-                  - @order.adjustments.eligible.each do |adjustment|
                     tr
-                      td style="padding: 4px 6px;"
-                      td style="padding: 4px 6px;"
-                      td style="text-align: right; font-size: 13px; font-weight: 400; padding: 4px 6px;" => raw(adjustment.label)
-                      td style="font-size: 13px; font-weight: 700; padding: 4px 6px;" = adjustment.display_amount
-                  tr
-                    td style="padding: 4px 6px;"
-                    td style="padding: 4px 6px;"
-                    td style="text-align: right; font-size: 13px; font-weight: 400; padding: 4px 6px;" Total
-                    td style="font-size: 13px; font-weight: 700; padding: 4px 6px;" = @order.display_total
+                      td
+                        .product-images style="margin: 0 -10px;"
+                          = link_to image_tag('http://placehold.it/254x400', width: 254, style: "border: 0;", alt: "", style: 'width: 100%; height: auto;'), '#', style: 'width: 33%; display: inline-block; vertical-align: top; padding: 0 10px 20px; box-sizing: border-box;'
+                          = link_to image_tag('http://placehold.it/254x400', width: 254, style: "border: 0;", alt: "", style: 'width: 100%; height: auto;'), '#', style: 'width: 33%; display: inline-block; vertical-align: top; padding: 0 10px 20px; box-sizing: border-box;'
+                          = link_to image_tag('http://placehold.it/254x400', width: 254, style: "border: 0;", alt: "", style: 'width: 100%; height: auto;'), '#', style: 'width: 33%; display: inline-block; vertical-align: top; padding: 0 10px 20px; box-sizing: border-box;'
+                          = link_to image_tag('http://placehold.it/254x400', width: 254, style: "border: 0;", alt: "", style: 'width: 100%; height: auto;'), '#', style: 'width: 33%; display: inline-block; vertical-align: top; padding: 0 10px 20px; box-sizing: border-box;'
+                          = link_to image_tag('http://placehold.it/254x400', width: 254, style: "border: 0;", alt: "", style: 'width: 100%; height: auto;'), '#', style: 'width: 33%; display: inline-block; vertical-align: top; padding: 0 10px 20px; box-sizing: border-box;'
+                        .product-name style="margin: 20px 0 4px; color: #000;"
+                          a href="#" style="text-decoration: none; color: #000; text-transform: uppercase; font-size: 18px; text-decoration: underline;" Name
+                        .product-description style="margin: 0 0 16px;" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et vehicula tortor, nec pharetra risus. Cras sollicitudin tellus turpis, non molestie sapien hendrerit sit amet. Quisque viverra sodales nulla, ut blandit diam lobortis quis. Fusce vehicula erat tellus, et vestibulum orci venenatis ac. Morbi eu fermentum risus. Duis sodales luctus enim, at convallis nulla. Nunc aliquet diam non odio mollis, non vehicula urna rutrum. Nunc finibus dictum justo, sed cursus neque pretium vel.
+                        .price style="color: #363636; font-size: 14px; font-weight: 700;" $99
+                        table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
+                          tbody
+                            tr
+                              td width='140'
+                                .buynow style="margin: 20px 0 5px; float: left"
+                                  a href="#" style="display: block; width: 130px; height: 38px; background: #000; color: #fff; text-decoration: none; text-transform: uppercase; text-align: center; font: 400 18px/38px 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" VIEW NOW
 
             tr
               td height="40"
@@ -66,28 +50,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
               td style="color: #666; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
 
                 p style="margin: 0;"
-                  | To track your order or manage your personal details, log in to your account here:
-                  = login_url
-
-                - if @order.user && @order.user.automagically_registered?
-                  p style="margin: 0;"
-                    | We have automatically created an account for your convenience where you can track your order and manage your personal details.
-
-                  p style="margin: 0;"
-                    | Your username is:&nbsp;
-                    strong= @order.email
-
-                  p style="margin: 0;"
-                    | Your temporary password is:&nbsp;
-                    strong= @order.number
-
-                  p style="margin: 0;"
-                    | Please change this password once you have logged in.
-            tr
-              td height="40"
-            tr
-              td style="color: #666; text-transform: uppercase; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
-                a href="http://fameandpartners.com/faqs" style="color: #666; text-transform: uppercase; text-decoration: none; font: 400 13px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;" FAQ
+                  | Our customer service stylists are here to help! If you would like some assistance in finding the perfect dress, you can book a free styling session for you and your daughter here: #{link_to 'http://fameandpartners.com/styling-session', '#'}
             tr
               td height="27"
       td width="15"
