[ref][deadcode] remove old payments report from spreeadmin

--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -18,6 +18,6 @@ li class=active_link_to_class(payments_report_path)
     li = active_link_to 'Payments', payments_report_path
 
 li
-  = link_to '/admin' do
+  = link_to spree.admin_path do
     i.fa.fa-usd
     span.nav-label Spree Admin
