alert sale timer markup

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -20,6 +20,7 @@
 
 @import 'redesign/forms';
 @import 'redesign/about';
+@import 'redesign/alerts';
 @import 'redesign/user';
 @import 'redesign/returns';
 @import 'redesign/why_us';
