--- a/app/assets/stylesheets/redesign/extras/_helpers.css.scss
+++ b/app/assets/stylesheets/redesign/extras/_helpers.css.scss
@@ -109,6 +109,19 @@
     }
     + span { margin-left: 10px;}
   }
+
+  &.timer-box-small {
+    > span {
+      &:before, &:after {
+        width: 24px;
+      }
+      > span {
+        font-size: 14px;
+        width: 51px;
+        height: 28px;
+      }
+    }
+  }
   
 }
 // @end Timer
