--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -234,3 +234,11 @@ ruby:
               span.visible-sm.visible-xs.visible-xxs = image_tag "_icons/shopping-bag.svg", class: 'nav-mobile-logo', alt: 'Cart'
               span.hidden-sm.hidden-xs.hidden-xxs cart:
               span#cart-item-count 0
+
+/.alert-sale role="alert"
+  a.close href="#"
+  span.medium $25 Off, just for you.
+  span.spacer
+  ' For 48 hours only
+  span.timer-box.timer-box-small
+    ' <span><span class="hh">48</span></span><span><span class="mm">00</span></span><span><span class="ss">00</span></span>
