show banner on page reload

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -243,3 +243,9 @@ ruby:
   span.banner-message
   span.timer-box.timer-box-small
     ' <span><span class="hh">48</span></span><span><span class="mm">00</span></span><span><span class="ss">00</span></span>
+
+- if cookies[:auto_apply_promo_code]
+  javascript:
+    $(function() {
+      window.page.showCountdownTimer("#{cookies[:auto_apply_promo_code_title]}", "#{cookies[:auto_apply_promo_code_message]}", #{cookies[:auto_apply_promo_code_started_at]}, #{cookies[:auto_apply_promo_code_duration]});
+    })
