--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -198,6 +198,10 @@
     }, {
       label: "auto_apply_promo", param: "aap", required: true, encoded: false, type: 'boolean',
       defaultValue: '<%= params[:aap] %>'
+    },
+    {
+      label: "campaign_uuid", param: "cu", required: false, encoded: true, type: 'string',
+      defaultValue: '<%= params[:cu] %>'
     }
   ];
 
